# qdmenu

./: CMakeLists.txt  README.md  qdmenu.pro
src/: config.h  drw.cpp  drw.h  qdmenu.cpp
